objects/MeetingNote__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-863; Lookup to the Account</description>
        <inlineHelpText>Please Select the Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>MeetingNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Achieved__c</fullName>
        <description>SFDC1-863; Long text field for Achieved</description>
        <label>Achieved</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ActivityDateTime__c</fullName>
        <description>SFDC-2748 Syncs with ActivityDateTime field on related Event</description>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AgendaItems__c</fullName>
        <description>SFDC1-863; field for Agenda Items</description>
        <label>Agenda Items</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AssetClass__c</fullName>
        <description>SFDC1-863; Asset Class</description>
        <inlineHelpText>Please Select Asset Class</inlineHelpText>
        <label>Asset Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Cross Asset;</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>FX</fullName>
                </value>
                <value>
                    <fullName>Rates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AttendeeNames__c</fullName>
        <inlineHelpText>Please Enter Client Attendee&apos;s Name</inlineHelpText>
        <label>Client Attendee Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CEOWorthyTakeaway__c</fullName>
        <label>CEO- Worthy Takeaway</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-863; Campaign Lookup</description>
        <inlineHelpText>Please Select Campaign</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>MeetingNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientMainContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Main Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>MeetingNotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Attendees</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>MeetingNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country/Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>SFDC-2748 Maps with Description field on Event</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DurationInMinutes__c</fullName>
        <description>SFDC-2748 Sync with DurationInMinutes field of Event</description>
        <label>Duration</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDateTime__c</fullName>
        <description>SFDC-2748 Maps with EndDateTime field on Event</description>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FullAddress__c</fullName>
        <description>SFDC1-6541, To display the full address in Meeting note email template w/o extra comma if few fields are blank.</description>
        <formula>Street__c +
IF(AND(NOT(ISBLANK(Street__c)), NOT(ISBLANK(City__c)) || NOT(ISBLANK(StateProvince__c)) || NOT(ISBLANK(ZipPostalCode__c))), BR(), &apos;&apos;) + 
IF(NOT(ISBLANK(City__c)), City__c + &apos;, &apos; + StateProvince__c + &apos; &apos; + ZipPostalCode__c, StateProvince__c + &apos; &apos; + ZipPostalCode__c) +
IF(NOT(ISBLANK(Street__c)) || NOT(ISBLANK(City__c)) || NOT(ISBLANK(StateProvince__c)) || NOT(ISBLANK(ZipPostalCode__c)), BR(), &apos;&apos;) + 
IF(NOT(ISBLANK(Country__c)), Country__c, &apos;&apos;)</formula>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitAttendeeNames__c</fullName>
        <inlineHelpText>Please Enter IHS Markit Attendee&apos;s Name</inlineHelpText>
        <label>IHS Markit Attendee Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Info__c</fullName>
        <label>Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InternalContactLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Add non-salesforce users</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>You can only send meeting notes to internal customers.</errorMessage>
            <filterItems>
                <field>Contact.Email</field>
                <operation>contains</operation>
                <value>@ihsmarkit.com, @markit.com, @markitserv.com, @ihs.com</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>MeetingNotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsAllDayEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-2748 Syncs with IsAllDayEvent field on Event</description>
        <label>All-Day Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPrivate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-2748 Syncs with IsPrivate field on related Event</description>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReminderSet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-2748 Syncs with IsReminderSet field on related Event</description>
        <label>Reminder Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-7046: Legacy ID field is the system id (unfriendly) referencing the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the system id (unfriendly) referencing the source record and is populated via migrating system</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarkitAttendeeNames__c</fullName>
        <inlineHelpText>Please Enter Attendee&apos;s Name</inlineHelpText>
        <label>Markit Attendee Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MeetingOutcome__c</fullName>
        <inlineHelpText>Please enter the notes for this meeting, things to consider including - Agenda, Achieved/Meeting Outcome, Next Steps</inlineHelpText>
        <label>Meeting Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NextSteps__c</fullName>
        <label>Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NotesCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-2752 True if meeting outcome is populated on Meeting Note.</description>
        <label>Notes Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfOpportunities__c</fullName>
        <label>Number of Opportunities</label>
        <summaryForeignKey>RelatedOpportunity__c.MeetingNote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>MeetingNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PKIDMeetNote__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>MtN{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID MeetNote</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PrivacyLevel__c</fullName>
        <description>SFDC-2748 Syncs to PrivacyLevel__c field in related Event(Activity) record.</description>
        <label>Privacy Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal appointment</fullName>
                </value>
                <value>
                    <fullName>Internal meeting</fullName>
                </value>
                <value>
                    <fullName>Customer-facing meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductFamilyLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-3843 : This field will hold the values from the Product Family field</description>
        <inlineHelpText>Please Enter the Product Family</inlineHelpText>
        <label>Product Family</label>
        <referenceTo>Family__c</referenceTo>
        <relationshipName>MeetingNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecipientList__c</fullName>
        <label>Recipient List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RelatedEventId__c</fullName>
        <description>SFDC-2748 Store related event id in a text field. This is a backend field created to save recursive trigger invocation.</description>
        <label>Related Event Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sentiment__c</fullName>
        <label>Sentiment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShowAs__c</fullName>
        <label>Show Time As</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Busy</fullName>
                </value>
                <value>
                    <fullName>OutOfOffice</fullName>
                </value>
                <value>
                    <fullName>Free</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDateTime__c</fullName>
        <description>SFDC-2748 Maps with StartDateTime field on Event</description>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StateProvince__c</fullName>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubAssetClass__c</fullName>
        <label>Sub Asset Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Review</fullName>
                </value>
                <value>
                    <fullName>Adoption</fullName>
                </value>
                <value>
                    <fullName>Auto Processing</fullName>
                </value>
                <value>
                    <fullName>Blockchain</fullName>
                </value>
                <value>
                    <fullName>Broker Affirmations</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Clearing</fullName>
                </value>
                <value>
                    <fullName>CLS</fullName>
                </value>
                <value>
                    <fullName>Compression</fullName>
                </value>
                <value>
                    <fullName>Custom Processing</fullName>
                </value>
                <value>
                    <fullName>DealHub</fullName>
                </value>
                <value>
                    <fullName>DMS tool</fullName>
                </value>
                <value>
                    <fullName>DSMatch</fullName>
                </value>
                <value>
                    <fullName>FX Options</fullName>
                </value>
                <value>
                    <fullName>FX Post trade enterprise</fullName>
                </value>
                <value>
                    <fullName>FX TradeSTP</fullName>
                </value>
                <value>
                    <fullName>FX Trading</fullName>
                </value>
                <value>
                    <fullName>MarkitWire</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
                <value>
                    <fullName>MTM</fullName>
                </value>
                <value>
                    <fullName>New Products</fullName>
                </value>
                <value>
                    <fullName>New Ventures</fullName>
                </value>
                <value>
                    <fullName>Operations/Support</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Roadmap</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Tools &amp; Applications</fullName>
                </value>
                <value>
                    <fullName>Unification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>SFDC-2748 Stores the subject of related event.</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>SFDC-2748 Maps with Type field on Event. Cannot restrict as it needs to store data for old events.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Meetings</fullName>
                    <label>Meeting</label>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Recipients</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MeetingNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>When__c</fullName>
        <label>When</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WhereFormula__c</fullName>
        <formula>Street__c &amp; BR() &amp; City__c + &quot;, &quot; + StateProvince__c + &quot;, &quot; + Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Where</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Where__c</fullName>
        <label>Where</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipPostalCode__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Meeting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Meeting Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>Read</sharingModel>
    <sharingReasons>
        <fullName>EventAttendeeShare__c</fullName>
        <label>EventAttendeeShare</label>
    </sharingReasons>
</CustomObject>